fortsättning på CompleteTree och dgmlParser

--- a/ConcreteSelectionWebApi/ConcreteSelectionWebApi.csproj
+++ b/ConcreteSelectionWebApi/ConcreteSelectionWebApi.csproj
@@ -18,4 +18,9 @@
     <Folder Include="DtoModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
