--- a/ConcreteSelectionWebApi/appsettings.json
+++ b/ConcreteSelectionWebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "DgmlFilePaths": {
+    "unreinforcedConcrete": "./dgml/unreinforcedConcrete.dgml"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
