Endpoint for serving tree as json done

--- a/ConcreteSelectionWebApi/appsettings.json
+++ b/ConcreteSelectionWebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "DgmlFilePaths": {
-    "unreinforcedConcrete": "./dgml/unreinforcedConcrete.dgml"
+    "unreinforcedConcrete": "./dgml/unreinforcedConcrete.dgml",
+    "completeTree": "./dgml/CompleteTree.dgml"
   },
   "Logging": {
     "LogLevel": {
