--- a/.github/workflows/main_concreteselectionwebapi.yml
+++ b/.github/workflows/main_concreteselectionwebapi.yml
@@ -26,7 +26,8 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp /p:CopyToPublishDirectory=Always /p:CopyToOutputDirectory=PreserveNewest
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
