CopyToOutputDirectory for master.dgml added

--- a/ConcreteSelectionWebApi/ConcreteSelectionWebApi.csproj
+++ b/ConcreteSelectionWebApi/ConcreteSelectionWebApi.csproj
@@ -19,4 +19,10 @@
     <Folder Include="DtoModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="master.dgml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
